# pyBBTD

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  reference_api.html  reference_bbtd.html  reference_btd.html  reference_covll1.html  reference_draw.html  reference_solvers.html  reference_stokes.html  reference_uniqueness.html  reference_visualization.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  reference.doctree  reference_api.doctree  reference_bbtd.doctree  reference_btd.doctree  reference_covll1.doctree  reference_draw.doctree  reference_solvers.doctree  reference_stokes.doctree  reference_uniqueness.doctree  reference_visualization.doctree
_modules/: index.html
_sources/: index.rst  index.rst.txt  reference.rst.txt  reference_api.rst  reference_api.rst.txt  reference_bbtd.rst  reference_btd.rst  reference_covll1.rst  reference_draw.rst.txt  reference_solvers.rst  reference_stokes.rst  reference_uniqueness.rst  reference_uniqueness.rst.txt  reference_visualization.rst  reference_visualization.rst.txt
docs/: conf.py  index.rst  reference.rst  reference_api.rst  reference_btd.rst  reference_covll1.rst  reference_solvers.rst  reference_stokes.rst  reference_visualization.rst
notebooks/: example_btd.ipynb  example_cov_bbtd.ipynb  example_covll1.ipynb  example_stokes.ipynb  example_vanilla_bbtd.ipynb
src/pybbtd/: btd.py  (+5 more)
tests/: test_bbtd.py  test_btd.py  test_random.py  test_stokes.py  test_uniqueness.py
(+56 files in other folders)
