[project]
name = "pybbtd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jflamant", email = "flamantjf@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "tensorly>=0.9.0",
]

[project.scripts]
pybbtd = "pybbtd:main"

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
